# a1

./: README.md
moveit/moveit_commander/src/moveit_commander/: move_group.py  planning_scene_interface.py  robot.py
moveit/moveit_ros/planning/moveit_cpp/: CMakeLists.txt
moveit_resources/moveit_resources/: .setup_assistant  CMakeLists.txt  package.xml
moveit_resources/moveit_resources/config/: arm_control.yaml  fake_controllers.yaml  ompl_planning.yaml  robotic_arm_assembly.srdf  robotic_arm_description.srdf  ros_controllers.yaml
moveit_resources/moveit_resources/launch/: arm_base.launch  arm_control.launch  arm_fake_control.launch  arm_move.launch  chomp_planning_pipeline.launch.xml  customw.launch  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  robotic_arm_assembly_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
moveit_resources/moveit_resources/scripts/: camimg.py  fksolver.py  iksolver.py  move_goal.cpp  mymove.py
moveit_resources/robotic_arm_description/: CMakeLists.txt  package.xml
moveit_resources/robotic_arm_description/meshes/: base_link.STL  end_effector.STL  fork.stl  gripper.STL  link_1.STL  link_2.STL  link_3.STL
moveit_resources/robotic_arm_description/meshes/fork4/: model.config  model.sdf
moveit_resources/robotic_arm_description/models/fork/: model.config  model.sdf
moveit_resources/robotic_arm_description/urdf/: robotic_arm_assembly.urdf  robotic_arm_description.urdf
moveit_resources/robotic_arm_description/worlds/: myworld.world
moveit_testing/: CMakeLists.txt  package.xml
moveit_testing/src/: main.cpp  try.cpp
robotic_arm_kinematics/: CMakeLists.txt  package.xml
robotic_arm_kinematics/include/robotic_arm_kinematics/: inverse_kinematics.h
robotic_arm_kinematics/src/: ik_test.cpp  inverse_kinematics.cpp
